// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AboutPage /> fetching content from external source should handle case where invalid content is received without any error 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "injectedReducers": Object {},
      "injectedSagas": Object {},
      "replaceReducer": [Function],
      "runSaga": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <IntlProvider
    locale="en"
  >
    <AboutPage
      error={false}
      getContent={[Function]}
      isLoading={false}
      skillsText={Array []}
    >
      <HelmetWrapper
        defer={true}
        encodeSpecialCharacters={true}
      >
        <SideEffect(NullComponent)
          defer={true}
          encodeSpecialCharacters={true}
          meta={
            Array [
              Object {
                "content": "Over mij pagina van Johan Meester zijn portfolio",
                "name": "description",
              },
            ]
          }
          title="Over mij"
          titleAttributes={Object {}}
        >
          <NullComponent
            defer={true}
            encodeSpecialCharacters={true}
            meta={
              Array [
                Object {
                  "content": "Over mij pagina van Johan Meester zijn portfolio",
                  "name": "description",
                },
              ]
            }
            title="Over mij"
            titleAttributes={Object {}}
          />
        </SideEffect(NullComponent)>
      </HelmetWrapper>
    </AboutPage>
  </IntlProvider>
</Provider>
`;

exports[`<AboutPage /> fetching content from external source should show an error message when content could not be loaded 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "injectedReducers": Object {},
      "injectedSagas": Object {},
      "replaceReducer": [Function],
      "runSaga": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <IntlProvider
    locale="en"
  >
    <AboutPage
      error={true}
      getContent={[Function]}
    >
      <HelmetWrapper
        defer={true}
        encodeSpecialCharacters={true}
      >
        <SideEffect(NullComponent)
          defer={true}
          encodeSpecialCharacters={true}
          meta={
            Array [
              Object {
                "content": "Over mij pagina van Johan Meester zijn portfolio",
                "name": "description",
              },
            ]
          }
          title="Over mij"
          titleAttributes={Object {}}
        >
          <NullComponent
            defer={true}
            encodeSpecialCharacters={true}
            meta={
              Array [
                Object {
                  "content": "Over mij pagina van Johan Meester zijn portfolio",
                  "name": "description",
                },
              ]
            }
            title="Over mij"
            titleAttributes={Object {}}
          />
        </SideEffect(NullComponent)>
      </HelmetWrapper>
      <ContentLoadingIndicator
        show={true}
        showError={true}
      >
        <Article__Article
          show={true}
        >
          <article
            className="Article__Article-fWCsyc fsmJEP"
          >
            <Header>
              <header>
                <SpeechBubble
                  arrowHeight="4vh"
                  arrowPosition="bottom-right"
                  backgroundColor="#465a65"
                  isGhost={false}
                  padding="1.5rem"
                  showArrowBreakpoint="750px"
                >
                  <Container__Container
                    showArrowBreakpoint="750px"
                  >
                    <div
                      className="Container__Container-duRnZL hevIvZ"
                    >
                      <Bubble__Bubble
                        arrowPosition="bottom-right"
                        backgroundColor="#465a65"
                        isGhost={false}
                        padding="1.5rem"
                        showArrowBreakpoint="750px"
                      >
                        <div
                          className="Bubble__Bubble-kfMqWC jlpZQX"
                        >
                          <Content__Content>
                            <div
                              className="Content__Content-bIVvry dSiTpj"
                            >
                              <H2__H2
                                isError={true}
                              >
                                <h2
                                  className="H2__H2-eTwhUa eRAOQZ"
                                >
                                  <FormattedMessage
                                    defaultMessage="Terribly sorry, but the content cannot be loaded at this time"
                                    id="portfolio.component.ContentLoadingIndicator.error"
                                    values={Object {}}
                                  >
                                    <span>
                                      Terribly sorry, but the content cannot be loaded at this time
                                    </span>
                                  </FormattedMessage>
                                </h2>
                              </H2__H2>
                              <SVGIcon__SVGIcon
                                height="2em"
                                viewBox="0 0 512 512"
                                width="2em"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="SVGIcon__SVGIcon-dvbyrX echoQx"
                                  focusable="false"
                                  height="2em"
                                  viewBox="0 0 512 512"
                                  width="2em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M304.083 405.907c4.686 4.686 4.686 12.284 0 16.971l-44.674 44.674c-59.263 59.262-155.693 59.266-214.961 0-59.264-59.265-59.264-155.696 0-214.96l44.675-44.675c4.686-4.686 12.284-4.686 16.971 0l39.598 39.598c4.686 4.686 4.686 12.284 0 16.971l-44.675 44.674c-28.072 28.073-28.072 73.75 0 101.823 28.072 28.072 73.75 28.073 101.824 0l44.674-44.674c4.686-4.686 12.284-4.686 16.971 0l39.597 39.598zm-56.568-260.216c4.686 4.686 12.284 4.686 16.971 0l44.674-44.674c28.072-28.075 73.75-28.073 101.824 0 28.072 28.073 28.072 73.75 0 101.823l-44.675 44.674c-4.686 4.686-4.686 12.284 0 16.971l39.598 39.598c4.686 4.686 12.284 4.686 16.971 0l44.675-44.675c59.265-59.265 59.265-155.695 0-214.96-59.266-59.264-155.695-59.264-214.961 0l-44.674 44.674c-4.686 4.686-4.686 12.284 0 16.971l39.597 39.598zm234.828 359.28l22.627-22.627c9.373-9.373 9.373-24.569 0-33.941L63.598 7.029c-9.373-9.373-24.569-9.373-33.941 0L7.029 29.657c-9.373 9.373-9.373 24.569 0 33.941l441.373 441.373c9.373 9.372 24.569 9.372 33.941 0z"
                                  />
                                </svg>
                              </SVGIcon__SVGIcon>
                            </div>
                          </Content__Content>
                        </div>
                      </Bubble__Bubble>
                      <Arrow
                        arrowPosition="bottom-right"
                        backgroundColor="#465a65"
                        height="4vh"
                        isGhost={false}
                        showBreakpoint="750px"
                      >
                        <Arrow__SVG
                          arrowPosition="bottom-right"
                          height="4vh"
                          showBreakpoint="750px"
                        >
                          <svg
                            className="Arrow__SVG-iWxuxU iCQjcB"
                            focusable="false"
                            height="4vh"
                            preserveAspectRatio="xMinYMid meet"
                            viewBox="0 0 848 640"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M424.2 424.4L526.9 640V398.7"
                              fill="#5b7583"
                              stroke="none"
                              strokeWidth="24"
                            />
                            <path
                              d="M848 318.3L424.2 424.4V158.9"
                              fill="#465a65"
                              stroke="none"
                              strokeWidth="24"
                            />
                            <path
                              d="M0 0l848 318.3L636.4 0H0z"
                              fill="#5b7583"
                              stroke="none"
                              strokeWidth="24"
                            />
                          </svg>
                        </Arrow__SVG>
                      </Arrow>
                    </div>
                  </Container__Container>
                </SpeechBubble>
              </header>
            </Header>
          </article>
        </Article__Article>
      </ContentLoadingIndicator>
    </AboutPage>
  </IntlProvider>
</Provider>
`;

exports[`<AboutPage /> fetching content from external source should show the fetched content 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "injectedReducers": Object {},
      "injectedSagas": Object {},
      "replaceReducer": [Function],
      "runSaga": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <IntlProvider
    locale="en"
  >
    <AboutPage
      aboutMeText={
        Array [
          <p>
            Test Content\\nNew Line
        </p>,
          "
        ",
        ]
      }
      error={false}
      getContent={[Function]}
      isLoading={false}
    >
      <HelmetWrapper
        defer={true}
        encodeSpecialCharacters={true}
      >
        <SideEffect(NullComponent)
          defer={true}
          encodeSpecialCharacters={true}
          meta={
            Array [
              Object {
                "content": "Over mij pagina van Johan Meester zijn portfolio",
                "name": "description",
              },
            ]
          }
          title="Over mij"
          titleAttributes={Object {}}
        >
          <NullComponent
            defer={true}
            encodeSpecialCharacters={true}
            meta={
              Array [
                Object {
                  "content": "Over mij pagina van Johan Meester zijn portfolio",
                  "name": "description",
                },
              ]
            }
            title="Over mij"
            titleAttributes={Object {}}
          />
        </SideEffect(NullComponent)>
      </HelmetWrapper>
      <PageContent
        content={
          Array [
            <p>
              Test Content\\nNew Line
          </p>,
            "
          ",
          ]
        }
        title={
          <FormattedMessage
            defaultMessage="ABOUT ME"
            id="portfolio.page.AboutPage.title"
            values={Object {}}
          />
        }
      >
        <Wrapper__Wrapper
          animate={true}
        >
          <div
            className="Wrapper__Wrapper-fEDTQp jgxDLY"
          >
            <PageHeader
              arrowPosition="bottom-left"
            >
              <StyledHeader__StyledHeader>
                <header
                  className="StyledHeader__StyledHeader-kHWYFT brSWxw"
                >
                  <SpeechBubble
                    arrowHeight="4vh"
                    arrowPosition="bottom-left"
                    backgroundColor="#465a65"
                    isGhost={false}
                    makeAppear={true}
                    showArrowBreakpoint="750px"
                  >
                    <Container__Container
                      makeAppear={true}
                      showArrowBreakpoint="750px"
                    >
                      <div
                        className="Container__Container-duRnZL gAUglN"
                      >
                        <Bubble__Bubble
                          arrowPosition="bottom-left"
                          backgroundColor="#465a65"
                          isGhost={false}
                          showArrowBreakpoint="750px"
                        >
                          <div
                            className="Bubble__Bubble-kfMqWC hrEoVL"
                          >
                            <H2__H2
                              color="#aedd2c"
                            >
                              <h2
                                className="H2__H2-eTwhUa iVVlVj"
                                color="#aedd2c"
                              >
                                <FormattedMessage
                                  defaultMessage="ABOUT ME"
                                  id="portfolio.page.AboutPage.title"
                                  values={Object {}}
                                >
                                  <span>
                                    ABOUT ME
                                  </span>
                                </FormattedMessage>
                              </h2>
                            </H2__H2>
                          </div>
                        </Bubble__Bubble>
                        <Arrow
                          arrowPosition="bottom-left"
                          backgroundColor="#465a65"
                          height="4vh"
                          isGhost={false}
                          showBreakpoint="750px"
                        >
                          <Arrow__SVG
                            arrowPosition="bottom-left"
                            height="4vh"
                            showBreakpoint="750px"
                          >
                            <svg
                              className="Arrow__SVG-iWxuxU ejSVef"
                              focusable="false"
                              height="4vh"
                              preserveAspectRatio="xMinYMid meet"
                              viewBox="0 0 848 640"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M424.2 424.4L526.9 640V398.7"
                                fill="#5b7583"
                                stroke="none"
                                strokeWidth="24"
                              />
                              <path
                                d="M848 318.3L424.2 424.4V158.9"
                                fill="#465a65"
                                stroke="none"
                                strokeWidth="24"
                              />
                              <path
                                d="M0 0l848 318.3L636.4 0H0z"
                                fill="#5b7583"
                                stroke="none"
                                strokeWidth="24"
                              />
                            </svg>
                          </Arrow__SVG>
                        </Arrow>
                      </div>
                    </Container__Container>
                  </SpeechBubble>
                </header>
              </StyledHeader__StyledHeader>
            </PageHeader>
            <ContentWrapper__ContentWrapper>
              <div
                className="ContentWrapper__ContentWrapper-lSlQT busshj"
              >
                <SpeechBubble
                  arrowHeight="9vh"
                  arrowPosition="bottom-right"
                  backgroundColor="#aedd2c"
                  color="#000"
                  isGhost={false}
                  makeAppear={false}
                  maxWidth="30em"
                  padding="1.5rem"
                  showArrowBreakpoint="750px"
                >
                  <Container__Container
                    makeAppear={false}
                    maxWidth="30em"
                    showArrowBreakpoint="750px"
                  >
                    <div
                      className="Container__Container-duRnZL czakBm"
                    >
                      <Bubble__Bubble
                        arrowPosition="bottom-right"
                        backgroundColor="#aedd2c"
                        color="#000"
                        isGhost={false}
                        padding="1.5rem"
                        showArrowBreakpoint="750px"
                      >
                        <div
                          className="Bubble__Bubble-kfMqWC kjxAdG"
                          color="#000"
                        >
                          <p
                            key="0"
                          >
                            Test Content\\nNew Line
                          </p>
                          
                          
                        </div>
                      </Bubble__Bubble>
                      <Arrow
                        arrowPosition="bottom-right"
                        backgroundColor="#aedd2c"
                        height="9vh"
                        isGhost={false}
                        showBreakpoint="750px"
                      >
                        <Arrow__SVG
                          arrowPosition="bottom-right"
                          height="9vh"
                          showBreakpoint="750px"
                        >
                          <svg
                            className="Arrow__SVG-iWxuxU eUZiEN"
                            focusable="false"
                            height="9vh"
                            preserveAspectRatio="xMinYMid meet"
                            viewBox="0 0 848 640"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M424.2 424.4L526.9 640V398.7"
                              fill="#bfe458"
                              stroke="none"
                              strokeWidth="24"
                            />
                            <path
                              d="M848 318.3L424.2 424.4V158.9"
                              fill="#aedd2c"
                              stroke="none"
                              strokeWidth="24"
                            />
                            <path
                              d="M0 0l848 318.3L636.4 0H0z"
                              fill="#bfe458"
                              stroke="none"
                              strokeWidth="24"
                            />
                          </svg>
                        </Arrow__SVG>
                      </Arrow>
                    </div>
                  </Container__Container>
                </SpeechBubble>
              </div>
            </ContentWrapper__ContentWrapper>
          </div>
        </Wrapper__Wrapper>
      </PageContent>
    </AboutPage>
  </IntlProvider>
</Provider>
`;

exports[`<AboutPage /> should render and match the snapshot 1`] = `
<React.Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Over mij
    </title>
    <meta
      content="Over mij pagina van Johan Meester zijn portfolio"
      name="description"
    />
  </HelmetWrapper>
  <React.Fragment />
</React.Fragment>
`;
